--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: block;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  min-height: 100vh;
+ 
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  position: relative;
+  /* Resimle aynı seviyede olmasını sağlar */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.img-with-shadow {
+  width: 100px;
+  /* Resmin genişliği */
+  top: 10px;
+  /* Üst boşluk */
+  right: 10px;
+  /* Sağ boşluk */
+  margin-bottom: 10px;
+  float: left;
+
+}
+
+/* sweetalert css özelleştirmeleri*/
+.swal2-popup {
+  border-radius: 40px;
+  width: 400px;
+  height: auto;
+
+}
+
+.custom-icon {
+  font-size: 10px;
+  /* İkona istediğiniz boyutu ayarlayabilirsiniz */
+}
+
+.custom-title {
+  font-size: 18px;
+  /* Başlık boyutunu istediğiniz gibi ayarlayabilirsiniz */
+}
+
+/* Metin (text) için özel CSS sınıfı */
+.custom-text {
+  font-size: 1px;
+  /* Metin boyutunu istediğiniz gibi ayarlayabilirsiniz */
 }
